--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Balance Sheet</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
   </head>
 
   <body>
@@ -17,7 +16,6 @@
             <span>Balance Sheet</span>
           </span>
         </h1>
-
         <div id="years" aria-hidden="true">
           <span class="year">2019</span>
           <span class="year">2020</span>
@@ -27,15 +25,14 @@
         <div class="table-wrap">
           <table>
             <caption>Assets</caption>
-            <thead>
-              <tr>
-                <td></td>
-                <th><span class="sr-only year">2019</span></th>
-                <th><span class="sr-only year">2020</span></th>
-                <th class="current"><span class="sr-only year">2021</span></th>
-              </tr>
-            </thead>
-
+              <thead>
+                <tr>
+                  <td></td>
+                  <th><span class="sr-only year">2019</span></th>
+                  <th><span class="sr-only year">2020</span></th>
+                  <th class="current"><span class="sr-only year">2021</span></th>
+                </tr>
+              </thead>
             <tbody>
               <tr class="data">
                 <th>Cash <span class="description">This is the cash we currently have on hand.</span></th>
@@ -74,7 +71,6 @@
               <th><span class="sr-only">2021</span></th>
               </tr>
             </thead>
-
             <tbody>
               <tr class="data">
                 <th>Loans <span class="description">The outstanding balance on our startup loan.</span></th>
@@ -113,7 +109,6 @@
               <th><span class="sr-only">2021</span></th>
               </tr>
             </thead>
-            
             <tbody>
               <tr class="total">
                 <th>Total <span class="sr-only">Net Worth</span></th>
@@ -123,8 +118,8 @@
               </tr>
             </tbody>
           </table>
-
         </div>
+
       </section>
     </main>
   </body>
